@@ -906,6 +906,7 @@ A figure directive:
 
 \includegraphics[width=50]{../../../docs/user/rst/images/biohazard.png}
 \caption{A figure is an image with a caption and/or a legend:}{\small 
+\leavevmode
 \begin{longtable}[c]{|p{0.156\locallinewidth}|p{0.563\locallinewidth}|}
 \hline
 
@@ -1201,6 +1202,7 @@ Compound 5, block 3 (a paragraph).
 
 Compound 7, with a table inside:
 
+\leavevmode
 \begin{longtable}[c]{|p{0.249\locallinewidth}|p{0.249\locallinewidth}|p{0.249\locallinewidth}|}
 \hline
 
@@ -1309,6 +1311,7 @@ paragraph 2
 
 This table has a cell spanning two columns:
 
+\leavevmode
 \begin{longtable}[c]{|p{0.075\locallinewidth}|p{0.075\locallinewidth}|p{0.086\locallinewidth}|}
 \hline
 \multicolumn{2}{|l|}{\textbf{
@@ -1370,6 +1373,7 @@ True
 
 Here's a table with cells spanning several rows:
 
+\leavevmode
 \begin{longtable}[c]{|p{0.296\locallinewidth}|p{0.156\locallinewidth}|p{0.226\locallinewidth}|}
 \hline
 \textbf{
@@ -1488,6 +1492,7 @@ width as the third line.
 \subsection*{5.2~~~Various non-ASCII characters}
 \label{various-non-ascii-characters}
 
+\leavevmode
 \begin{longtable}[c]{|p{0.028\locallinewidth}|p{0.424\locallinewidth}|}
 \hline
 
